Fixed extra pace on the right by using style overflow-x: hidden to home and html

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -39,7 +39,13 @@ body {
   font-family: "Poppins", Arial, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
-  /* font-size: 16px; */
+  overflow-x: hidden;
+}
+
+html {
+  /* margin: 0;
+  padding: 0; */
+  overflow-x: hidden;
 }
 
 section {
@@ -1034,6 +1040,7 @@ footer a i {
   html {
     font-size: 80%;
   }
+
   footer p {
     font-size: 0.6rem;
   }
